# pratac

./: CLAUDE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  setup  setup.py  test_implementation.py  test_manual.py
src/pratac/: __main__.py  argparser.py
